[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cashia-model"
version = "1.1.0"
description = "Model package for Cashia"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Juan Manuel Ahuactzin" }
]
dependencies = [
  "cashia-core==1.1.0",
  "pandas==1.5.3",
  "numpy==1.26.0",
  "scikit-learn==1.2.2",
  "joblib==1.3.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]